config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@@platforms//os:macos",
        "@@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@@platforms//os:macos",
        "@@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@@platforms//os:linux",
        "@@platforms//cpu:aarch64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@@platforms//os:linux",
        "@@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@@platforms//os:windows",
        "@@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows_x64",
    constraint_values = [
        "@@platforms//os:windows",
        "@@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)
