load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "sha256_test",
    srcs = ["sha256_test.cc"],
    copts = select({
        "//configs:windows_arm64": ["/std:c++17"],
        "//configs:windows_x64": ["/std:c++17"],
        "//conditions:default": ["-std=c++17"],
    }),
    data = ["@openssl"],
    env = {
        "OPENSSL": "$(rootpath @openssl)",
    },
)

cc_test(
    name = "build_test",
    srcs = ["build_test.cc"],
    deps = [
        ":includes_bn",
    ],
)

cc_library(
    name = "includes_bn",
    srcs = [":includes_bh.cpp"],
    deps = ["@openssl//:ssl"],
)

write_file(
    name = "generate_includes_bh",
    out = "includes_bh.cpp",
    content = [
        "#include <openssl/bn.h>",
        "",
    ],
    newline = "unix",
)
